50-nap-policies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app1"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app1.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app2"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app2.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app3"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app3.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app4"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app4.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app5.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app5"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app5.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app6.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app6"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app6.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app7.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app7"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app7.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app8.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app8"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app8.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app9.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app9"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app9.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app10.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app10"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app10.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app11.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app11"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app11.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app12.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app12"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app12.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app13.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app13"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app13.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app14.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app14"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app14.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app15.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app15"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app15.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app16.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app16"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app16.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app17.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app17"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app17.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app18.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app18"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app18.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app19.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app19"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app19.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app20.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app20"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app20.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app21.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app21"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app21.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app22.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app22"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app22.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app23.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app23"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app23.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app24.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app24"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app24.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app25.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app25"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app25.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app26.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app26"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app26.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app27.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app27"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app27.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app28.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app28"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app28.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app29.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app29"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app29.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app30.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app30"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app30.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app31.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app31"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app31.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app32.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app32"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app32.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app33.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app33"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app33.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app34.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app34"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app34.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app35.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app35"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app35.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app36.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app36"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app36.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app37.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app37"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app37.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app38.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app38"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app38.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app39.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app39"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app39.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app40.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app40"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app40.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app41.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app41"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app41.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app42.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app42"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app42.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app43.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app43"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app43.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app44.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app44"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app44.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app45.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app45"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app45.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app46.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app46"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app46.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app47.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app47"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app47.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app48.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app48"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app48.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app49.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app49"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app49.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app4-svc
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app50.f5k8s.net
  namespace: apps
  annotations:
    appprotect.f5.com/app-protect-policy: "app50"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=fluentd-svc.fluentd:8515"
spec:
  ingressClassName: nginx-plus
  rules:
  - host: app50.f5k8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app5-svc
            port:
              number: 80

---
